--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body class="page__body">
+<header class="main-header">
+  <a class="main-header__logo" href="#">
+    <img class="mane-header__logo-image" src="/source/img/logo.svg" alt="Город Седона" width="185" height="96">
+  </a>
+  <nav class="main-navigation">
+    <button class="main-navigation__toggle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
+    <div class="main-navigation__wrapper">
+      <ul class="main-navigation__list site-list">
+        <li class="site-list__item">
+          <a href="index.html">Главная</a>
+        </li>
+        <li class="site-list__item">
+          <a href="">Фото и видео</a>
+        </li>
+        <li class="site-list__item">
+          <a href="">Форма Отзыва</a>
+        </li>
+        <li class="site-list__item">
+          <a href="">HTML ACADEMY</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
 
-  </body>
+</body>
 </html>
