--- a/source/index.html
+++ b/source/index.html
@@ -98,12 +98,37 @@
 
   <section class="location">
     <div class="location__wrapper">
-      <img class="location__map" src="/source/img/map-mobile.jpg" width="320" height="350" alt="Карта расположения города Седона">
+      <img class="location__map" src="/source/img/map-mobile.jpg" width="320" height="350" alt="Местоположение Седоны">
     </div>
   </section>
-
 </main>
 
+<footer class="main-footer">
+  <div class="main-footer__wrapper">
+    <div class="main-footer__hashtag hashtag">
+      <a class="hashtag__text" href="#">#visitSEDONA</a>
+    </div>
+    <div class="main-footer__social social">
+      <ul class="social__list">
+        <li class="social__item">
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+        </li>
+        <li class="social__item">
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+        </li>
+      </ul>
+    </div>
+    <div class="main-footer__copyright copyright">
+      <b class="copyright__text">Разработано:</b>
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+        <span class="visually-hidden">HTML Academy</span>
+      </a>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
