fixed html, classes in file index.html

--- a/source/index.html
+++ b/source/index.html
@@ -16,21 +16,22 @@
     <div class="main-navigation__wrapper">
       <ul class="main-navigation__list site-list">
         <li class="site-list__item site-list__item--current">
-          <a href="index.html">Главная</a>
+          <a class="site-list__link" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a href="catalog.html">Фото и видео</a>
+          <a class="site-list__link" href="catalog.html">Фото и видео</a>
         </li>
         <li class="site-list__item">
-          <a href="form.html">Форма Отзыва</a>
+          <a class="site-list__link" href="form.html">Форма Отзыва</a>
         </li>
         <li class="site-list__item">
-          <a href="#">HTML ACADEMY</a>
+          <a class="site-list__link" href="#">HTML ACADEMY</a>
         </li>
       </ul>
     </div>
   </nav>
 </header>
+
 <main class="main-container">
   <h1 class="visually-hidden">Город Седона</h1>
 
@@ -47,27 +48,29 @@
     <div class="advantages-wrapper">
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">
-          <h3 class="advantages__title">Настоящий городок</h3>
-          <span class="advantages__number">— №1 —</span>
-          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+        <li class="advantages__item accent-item">
+          <h3 class="accent-item__title">Настоящий городок</h3>
+          <span class="accent-item__number">— №1 —</span>
+          <p class="accent-item__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img class="accent-item__image" src="/source/img/street-sedona.jpg" width="800" height="400" alt="Город Седона" >
         </li>
-        <li class="advantages__item advantages__item--house">
+        <li class="advantages__item advantages__item--house qualities-item">
           <h3 class="advantages__title">Жилье</h3>
           <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
-        <li class="advantages__item advantages__item--food">
+        <li class="advantages__item advantages__item--food qualities-item">
           <h3 class="advantages__title">Еда</h3>
           <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="advantages__item advantages__item--souvenirs">
+        <li class="advantages__item advantages__item--souvenirs qualities-item">
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
-        <li class="advantages__item">
-          <h3 class="advantages__title">Там есть Мост дьявола</h3>
-          <span class="advantages__number">— №2 —</span>
-          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+        <li class="advantages__item accent-item">
+          <h3 class="accent-item__title">Там есть Мост дьявола</h3>
+          <span class="accent-item__number">— №2 —</span>
+          <p class="accent-item__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img class="accent-item__image" src="/source/img/devil-bridge.jpg" width="800" height="400" alt="Мост дьявола">
         </li>
         <li class="advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
