--- a/source/index.html
+++ b/source/index.html
@@ -14,18 +14,18 @@
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <div class="main-navigation__wrapper">
-      <ul class="main-navigation__list site-list">
-        <li class="site-list__item site-list__item--current">
-          <a class="site-list__link" href="index.html">Главная</a>
+      <ul class="main-navigation__list">
+        <li class="main-navigation__item main-navigation__item--current">
+          <a class="main-navigation__link" href="index.html">Главная</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Фото и видео</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html">Форма Отзыва</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="form.html">Форма Отзыва</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="#">HTML ACADEMY</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="#">HTML ACADEMY</a>
         </li>
       </ul>
     </div>
@@ -38,7 +38,8 @@
   <section class="intro">
     <div class="intro-wrapper">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
-      <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
+      <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214"
+           alt="Добро пожаловать в Седону.">
       <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="intro__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
@@ -48,29 +49,31 @@
     <div class="advantages-wrapper">
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
-        <li class="advantages__item accent-item">
-          <h3 class="accent-item__title">Настоящий городок</h3>
-          <span class="accent-item__number">— №1 —</span>
-          <p class="accent-item__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="accent-item__image" src="/source/img/street-sedona.jpg" width="800" height="400" alt="Город Седона" >
+        <li class="advantages__item advantages__item--accent">
+          <h3 class="advantages__title">Настоящий городок</h3>
+          <span class="advantages__number">— №1 —</span>
+          <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <img class="advantages__image" src="/source/img/street-sedona.jpg" width="800" height="400"
+               alt="Город Седона">
         </li>
-        <li class="advantages__item advantages__item--house qualities-item">
+        <li class="advantages__item advantages__item--house">
           <h3 class="advantages__title">Жилье</h3>
           <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
-        <li class="advantages__item advantages__item--food qualities-item">
+        <li class="advantages__item advantages__item--food">
           <h3 class="advantages__title">Еда</h3>
           <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
-        <li class="advantages__item advantages__item--souvenirs qualities-item">
+        <li class="advantages__item advantages__item--souvenirs">
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
-        <li class="advantages__item accent-item">
-          <h3 class="accent-item__title">Там есть Мост дьявола</h3>
-          <span class="accent-item__number">— №2 —</span>
-          <p class="accent-item__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="accent-item__image" src="/source/img/devil-bridge.jpg" width="800" height="400" alt="Мост дьявола">
+        <li class="advantages__item advantages__item--accent">
+          <h3 class="advantages__title">Там есть Мост дьявола</h3>
+          <span class="advantages__number">— №2 —</span>
+          <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          <img class="advantages__image" src="/source/img/devil-bridge.jpg" width="800" height="400"
+               alt="Мост дьявола">
         </li>
         <li class="advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
@@ -94,14 +97,24 @@
   <section class="search">
     <div class="search__wrapper">
       <h2 class="search__title">Заинтересовались?</h2>
-      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <p class="search__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
+        седоне</p>
       <button class="search__button button" type="submit">Найти гостиницу</button>
     </div>
   </section>
 
   <section class="location">
     <div class="location__wrapper">
-      <img class="location__map" src="/source/img/map-mobile.jpg" width="320" height="350" alt="Местоположение Седоны">
+      <h2 class="visually-hidden">Местоположение Седоны</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      <!--  Image map временно
+          <img class="location__map" src="/source/img/map-mobile.jpg"
+          width="320" height="350" alt="Местоположение Седоны">-->
+
     </div>
   </section>
 </main>
@@ -109,7 +122,7 @@
 <footer class="main-footer">
   <div class="main-footer__wrapper">
     <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__text" href="#">#visitSEDONA</a>
+      <a class="hashtag__link" href="#">#visitSEDONA</a>
     </div>
     <div class="main-footer__social social">
       <ul class="social__list">
