--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,18 +14,18 @@
       <span class="visually-hidden">Открыть меню</span>
     </button>
     <div class="main-navigation__wrapper">
-      <ul class="main-navigation__list site-list">
-        <li class="site-list__item site-list__item--current">
-          <a class="site-list__link" href="index.html">Главная</a>
+      <ul class="main-navigation__list">
+        <li class="main-navigation__item main-navigation__item--current">
+          <a class="main-navigation__link" href="index.html">Главная</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Фото и видео</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="catalog.html">Фото и видео</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="form.html">Форма Отзыва</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="form.html">Форма Отзыва</a>
         </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="#">HTML ACADEMY</a>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="#">HTML ACADEMY</a>
         </li>
       </ul>
     </div>
@@ -36,7 +36,7 @@
   <h1 class="visually-hidden">Фото и видео города Седона</h1>
   <section class="intro">
     <div class="intro-wrapper">
-      <h2 class="visually-hidden">Фото и видео городом Седона</h2>
+      <h2 class="visually-hidden">Седона</h2>
       <img class="intro__logo" src="/source/img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
     </div>
   </section>
@@ -101,7 +101,7 @@
 <footer class="main-footer">
   <div class="main-footer__wrapper">
     <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__text" href="#">#visitSEDONA</a>
+      <a class="hashtag__link" href="#">#visitSEDONA</a>
     </div>
     <div class="main-footer__social social">
       <ul class="social__list">
