--- a/source/form.html
+++ b/source/form.html
@@ -183,6 +183,22 @@
   </div>
 </footer>
 
+<div class="modal modal-error">
+  <div class="modal-error__wrapper">
+    <h2 class="modal-error__title">Что-то пошло не так!</h2>
+    <p class="modal-error__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+    <button class="modal-error__button button">Ok</button>
+  </div>
+</div>
+
+<div class="modal modal-correct">
+  <div class="modal-correct__wrapper">
+    <h2 class="modal-correct__title">Ваш отзыв отправлен!</h2>
+    <p class="modal-correct__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+    <button class="modal-correct__button button">Закрыть окно</button>
+  </div>
+</div>
+
 </body>
 </html>
 
