--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
           <a class="main-navigation__link" href="form.html">Форма Отзыва</a>
         </li>
         <li class="main-navigation__item">
-          <a class="main-navigation__link" href="#">HTML ACADEMY</a>
+          <a class="main-navigation__link" href="#">Html academy</a>
         </li>
       </ul>
     </div>
@@ -106,15 +106,10 @@
   <section class="location">
     <div class="location__wrapper">
       <h2 class="visually-hidden">Местоположение Седоны</h2>
-      <iframe
+      <iframe class="location__map"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-      <!--  Image map временно
-          <img class="location__map" src="/source/img/map-mobile.jpg"
-          width="320" height="350" alt="Местоположение Седоны">-->
-
     </div>
   </section>
 </main>
@@ -122,18 +117,24 @@
 <footer class="main-footer">
   <div class="main-footer__wrapper">
     <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__link" href="#">#visitSEDONA</a>
+      <a class="hashtag__link" href="#">#visitsedona</a>
     </div>
     <div class="main-footer__social social">
       <ul class="social__list">
         <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Мы в Вконтакте</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Мы в Телеграме</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Мы в Ютубе</span>
+          </a>
         </li>
       </ul>
     </div>
