--- a/source/index.html
+++ b/source/index.html
@@ -38,8 +38,7 @@
   <section class="intro">
     <div class="intro-wrapper">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
-      <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214"
-           alt="Добро пожаловать в Седону.">
+      <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
       <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="intro__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
@@ -53,8 +52,7 @@
           <h3 class="advantages__title">Настоящий городок</h3>
           <span class="advantages__number">— №1 —</span>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="advantages__image" src="/source/img/street-sedona.jpg" width="800" height="400"
-               alt="Город Седона">
+          <img class="advantages__image" src="/source/img/street-sedona.jpg" width="800" height="400" alt="Город Седона">
         </li>
         <li class="advantages__item advantages__item--house">
           <h3 class="advantages__title">Жилье</h3>
@@ -72,8 +70,7 @@
           <h3 class="advantages__title">Там есть Мост дьявола</h3>
           <span class="advantages__number">— №2 —</span>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="advantages__image" src="/source/img/devil-bridge.jpg" width="800" height="400"
-               alt="Мост дьявола">
+          <img class="advantages__image" src="/source/img/devil-bridge.jpg" width="800" height="400" alt="Мост дьявола">
         </li>
         <li class="advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
