fixed html, classes in all files

--- a/source/form.html
+++ b/source/form.html
@@ -35,7 +35,7 @@
 <main class="main-container">
   <h1 class="visually-hidden">Форма отзыва</h1>
   <section class="intro">
-    <div class="intro-wrapper">
+    <div class="intro__wrapper">
       <h2 class="visually-hidden">Седона</h2>
       <img class="intro__logo" src="/source/img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
     </div>
