--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
 <main class="main-container">
   <h1 class="visually-hidden">Фото и видео города Седона</h1>
   <section class="intro">
-    <div class="intro-wrapper">
+    <div class="intro__wrapper">
       <h2 class="visually-hidden">Седона</h2>
       <img class="intro__logo" src="/source/img/logo-catalog.svg" width="229" height="39" alt="Добро пожаловать в Седону.">
     </div>
@@ -49,7 +49,7 @@
 
       <ul class="content__list gallery">
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
+          <img class="gallery__image" src="./img/catalog/photo-1-mobile.jpg" width="280" height="280" alt="Дорога среди равнин">
           <h3 class="gallery__title">неродные просторы</h3>
           <span class="gallery__author">Автор фото: <cite>Борис</cite></span>
           <a class="gallery__likes" href="#">
@@ -58,7 +58,7 @@
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
+          <img class="gallery__image" src="./img/catalog/photo-2-mobile.jpg" width="280" height="280" alt="Местные растения">
           <h3 class="gallery__title">Местная растительность</h3>
           <span class="gallery__author">Автор фото: <cite>Сергей</cite></span>
           <a class="gallery__likes" href="#">
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
+          <img class="gallery__image" src="./img/catalog/photo-3-mobile.jpg" width="280" height="280" alt="Горный серпантин">
           <h3 class="gallery__title">Дорога на север</h3>
           <span class="gallery__author">Автор фото: <cite>Петр</cite></span>
           <a class="gallery__likes" href="#">
@@ -76,7 +76,7 @@
           </a>
         </li>
         <li class="gallery__item">
-          <img class="gallery__image" src="" alt="">
+          <img class="gallery__image" src="./img/catalog/photo-4-mobile.jpg" width="280" height="280" alt="Мост дьявола">
           <h3 class="gallery__title">Мост дьявола</h3>
           <span class="gallery__author">Автор фото: <cite>Антон</cite></span>
           <a class="gallery__likes" href="#">
@@ -92,7 +92,10 @@
     <div class="video__wrapper">
       <h2 class="video__title">Все еще сомневаетесь?</h2>
       <p class="video__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-      <video class="video__content" src=""></video>
+      <img class="video__content-image" src="./img/catalog/video-mobile.jpg" width="280" height="177" alt="Видеопрезентация о Седоне">
+      <button class="video__button" type="button">
+        <span class="visually-hidden">Включить видео</span>
+      </button>
     </div>
   </section>
 
