--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="main-header">
@@ -36,7 +37,7 @@
   <h1 class="visually-hidden">Город Седона</h1>
 
   <section class="intro">
-    <div class="intro-wrapper">
+    <div class="intro__wrapper">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
       <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
       <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
@@ -45,14 +46,14 @@
   </section>
 
   <section class="advantages">
-    <div class="advantages-wrapper">
+    <div class="advantages__wrapper">
       <h2 class="visually-hidden">Преимущества</h2>
       <ul class="advantages__list">
         <li class="advantages__item advantages__item--accent">
           <h3 class="advantages__title">Настоящий городок</h3>
           <span class="advantages__number">— №1 —</span>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <img class="advantages__image" src="/source/img/street-sedona.jpg" width="800" height="400" alt="Город Седона">
+          <img class="advantages__image" src="./img/photo-city-mobile.jpg" width="320" height="260" alt="Город Седона">
         </li>
         <li class="advantages__item advantages__item--house">
           <h3 class="advantages__title">Жилье</h3>
@@ -70,7 +71,7 @@
           <h3 class="advantages__title">Там есть Мост дьявола</h3>
           <span class="advantages__number">— №2 —</span>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <img class="advantages__image" src="/source/img/devil-bridge.jpg" width="800" height="400" alt="Мост дьявола">
+          <img class="advantages__image" src="./img/photo-bridge-mobile.jpg" width="320" height="260" alt="Мост дьявола">
         </li>
         <li class="advantages__item">
           <h3 class="advantages__title">Небольшая площадь</h3>
@@ -103,10 +104,14 @@
   <section class="location">
     <div class="location__wrapper">
       <h2 class="visually-hidden">Местоположение Седоны</h2>
-      <iframe class="location__map"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <img class="location__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Местоположение Седоны на карте">
+
+<!--  img or iframe?
+            <iframe class="location__map"-->
+<!--        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d711102.2562818521!2d-111.75074679442676!3d34.81236743292051!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1659068815140!5m2!1sru!2sru"-->
+<!--        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"-->
+<!--        referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+
     </div>
   </section>
 </main>
@@ -143,6 +148,5 @@
     </div>
   </div>
 </footer>
-
 </body>
 </html>
