--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 <body class="page__body">
 <header class="main-header">
   <a class="main-header__logo" href="#">
-    <img class="main-header__logo-image" src="/source/img/logo.svg" alt="Город Седона" width="185" height="96">
+    <img class="main-header__logo-image" src="img/logo.svg" alt="Город Седона" width="185" height="96">
   </a>
   <nav class="main-navigation">
     <button class="main-navigation__toggle" type="button">
@@ -39,7 +39,7 @@
   <section class="intro">
     <div class="intro__wrapper">
       <h2 class="visually-hidden">Знакомство с городом Седона</h2>
-      <img class="intro__logo" src="/source/img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
+      <img class="intro__logo" src="img/intro-logo.svg" width="282" height="214" alt="Добро пожаловать в Седону.">
       <p class="intro__slogan">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
       <p class="intro__reasons">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </div>
