--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Форма отзыва</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
 <header class="main-header">
@@ -67,7 +68,7 @@
           <legend class="field-group__title">Контактная информация:</legend>
           <div class="field-group__phone">
             <label for="phone" class="field-group__form-label">Контактный телефон<sup>*</sup>:</label>
-            <input class="field-group__form-input" type="text" name="phone" id="phone" placeholder="Введите телефон" required>
+            <input class="field-group__form-input" type="tel" name="phone" id="phone" placeholder="Введите телефон" required>
           </div>
           <div class="field-group__email">
             <label for="email" class="field-group__form-label">Электронная почта<sup>*</sup>:</label>
@@ -80,21 +81,21 @@
           <ul class="field-group__list">
             <li class="field-group__item">
               <label class="field-group__form-label">
-                <input class="field-group__form-input visually-hidden" type="radio" name="positive" checked>
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression" checked>
                 <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Скорее положительное
               </label>
             </li>
             <li class="field-group__item">
               <label class="field-group__form-label">
-                <input class="field-group__form-input visually-hidden" type="radio" name="negative">
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
                 <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Скорее отрицательное
               </label>
             </li>
             <li class="field-group__item">
               <label class="field-group__form-label">
-                <input class="field-group__form-input visually-hidden" type="radio" name="unknown">
+                <input class="field-group__form-input visually-hidden" type="radio" name="impression">
                 <span class="field-group__control-mark field-group__control-mark--radio"></span>
                 Затрудняюсь ответить
               </label>
@@ -137,8 +138,8 @@
         </fieldset>
 
         <div class="reviews__field-group field-group">
-          <label for="review" class="field-group__form-label">Опишите свои эмоции:</label>
-          <textarea class="field-group__form-input" name="review" id="review" placeholder="Опишите подробно все свои восторги">
+          <label for="review-text" class="field-group__form-label">Опишите свои эмоции:</label>
+          <textarea class="field-group__form-input" name="review-text" id="review-text" placeholder="Опишите подробно все свои восторги">
           </textarea>
         </div>
 
@@ -151,15 +152,13 @@
       </form>
     </div>
   </section>
-
 </main>
 
 <footer class="main-footer">
   <div class="main-footer__wrapper">
-    <div class="main-footer__hashtag hashtag">
-      <a class="hashtag__link" href="#">#visitsedona</a>
-    </div>
-    <div class="main-footer__social social">
+    <a class="main-footer__hashtag-link" href="#">#visitsedona</a>
+    <section class="main-footer__social social">
+      <h2 class="visually-hidden">Социальные сети</h2>
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
@@ -177,13 +176,13 @@
           </a>
         </li>
       </ul>
-    </div>
-    <div class="main-footer__copyright copyright">
+    </section>
+    <p class="main-footer__copyright copyright">
       <b class="copyright__text">Разработано:</b>
       <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
         <span class="visually-hidden">HTML Academy</span>
       </a>
-    </div>
+    </p>
   </div>
 </footer>
 
@@ -191,7 +190,7 @@
   <div class="modal-error__wrapper">
     <h2 class="modal-error__title">Что-то пошло не так!</h2>
     <p class="modal-error__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-    <button class="modal-error__button button">Ok</button>
+    <button class="modal-error__button button" type="button">Ok</button>
   </div>
 </div>
 
@@ -199,7 +198,7 @@
   <div class="modal-correct__wrapper">
     <h2 class="modal-correct__title">Ваш отзыв отправлен!</h2>
     <p class="modal-correct__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
-    <button class="modal-correct__button button">Закрыть окно</button>
+    <button class="modal-correct__button button" type="button">Закрыть окно</button>
   </div>
 </div>
 
